# scraper

./: CMakeLists.txt  README.md
data/: .gitkeep  parsed_text.txt  scraped_table.txt
include/: .gitkeep
scripts/: main.py
src/: main.cpp
